--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       font-size: 40px;
     }
 
+    table tr th:first-child{width:130px;}
     table tr:first-child th:first-child {
       border-top-left-radius: 10px;
     }
@@ -115,6 +116,8 @@
     table tr:last-child td:last-child {
       border-bottom-right-radius: 10px;
     }
+
+    table 
 
     .pc-style {
       width: 80%;
