--- a/index.html
+++ b/index.html
@@ -632,7 +632,8 @@
       "保护,光属性,越战越强,干扰,人类",
       "削弱,士兵,群体攻击,贫乳,光属性",
       "治疗者,生存力,魔族,输出,防御",
-      "水属性,越战越强,小体型,人类,火属性"
+      "水属性,越战越强,小体型,人类,火属性",
+      "人类,回复,美乳,火属性,风属性"
     ];
 
 //<body style="background:rgb(221, 241, 220)" id="body">
