接着更新词条

--- a/index.html
+++ b/index.html
@@ -633,7 +633,9 @@
       "削弱,士兵,群体攻击,贫乳,光属性",
       "治疗者,生存力,魔族,输出,防御",
       "水属性,越战越强,小体型,人类,火属性",
-      "人类,回复,美乳,火属性,风属性"
+      "人类,回复,美乳,火属性,风属性",
+      "菁英,攻击者,输出,魔族,越战越强",
+      "生存力,治疗者,美乳,爆发力,士兵",
     ];
 
 //<body style="background:rgb(221, 241, 220)" id="body">
