--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@
       "人类,回复,美乳,火属性,风属性",
       "菁英,攻击者,输出,魔族,越战越强",
       "生存力,治疗者,美乳,爆发力,士兵",
-      "越战越强,火属性,守护者,亚人,治疗者"
-
+      "越战越强,火属性,守护者,亚人,治疗者",
+      "魔族,保护,回复,贫乳,守护者"
     ];
 
 //<body style="background:rgb(221, 241, 220)" id="body">
