--- a/index.html
+++ b/index.html
@@ -445,60 +445,61 @@
             data2 += ", " + data[i].value[j];
           }
         }
+        var charName =  data[i].value[0].split('[')[0];
         value += "<u style=\"cursor:pointer\" onClick=\"lockCharaClick('" + data[i].value[0] + "')\">" +
-          data[i].value[0] + "</u> (" + data2 + ")</div>"
+          charName + "</u> (" + data2 + ")</div>"
       }
       return value;
     }
 
     /********************************数据集合**********************************************/
     var dataset = [
-      ["3☆魔王 巴尔", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
-      ["3☆魔王 撒旦", "领袖", "闇属性", "魔族", "中体型", "守护者", "生存力", "回击", "防御"],
-      ["3☆精灵王 赛露西亚", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
-      ["3☆矮人王 兰儿", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
-      ["3☆法斯公主 露露", "领袖", "风属性", "人类", "治疗者", "回复"],
-      ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
-      ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
-      ["3☆KS-VIII 魔人偶", "闇属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
-      ["3☆煌星 妲斯艾菲娜", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
-      ["3☆复生公主 千鹤", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
-      ["3☆天使长 圣米勒", "光属性", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
-      ["3☆千年血族 洛缇亚(收集中)", "闇属性", "攻击者", "魔族", "领袖", "巨乳(?)", "输出", "爆发力"],
-      ["3☆食梦 阿尔蒂雅(收集中)", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "支援(?)"],
+      ["3☆魔王 巴尔[101]", "领袖", "火属性", "魔族", "中体型", "攻击者", "爆发力", "输出"],
+      ["3☆魔王 撒旦[102]", "领袖", "闇属性", "魔族", "中体型", "守护者", "生存力", "回击", "防御"],
+      ["3☆精灵王 赛露西亚[104]", "领袖", "风属性", "亚人", "中体型", "巨乳(?)", "辅助者", "爆发力", "支援"],
+      ["3☆矮人王 兰儿[105]", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
+      ["3☆法斯公主 露露[106]", "领袖", "风属性", "人类", "治疗者", "回复"],
+      ["3☆魔王 伊布力斯[103]", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
+      ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
+      ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
+      ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
+      ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
+      ["3☆天使长 圣米勒[107]", "光属性", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
+      ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "领袖", "巨乳(?)", "输出", "爆发力"],
+      ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱"],
 
-      ["2☆魔管家 艾可", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
-      ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
-      ["2☆神官长 菲欧菈", "菁英", "光属性", "人类", "治疗者", "美乳", "中体型", "回复"],
-      ["2☆女忍者 凛月", "菁英", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发力"],
-      ["2☆剑圣 神无雪", "菁英", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
-      ["2☆妖狐 静", "菁英", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱", "干扰"],
-      ["2☆大将军 朱诺安", "菁英", "闇属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
-      ["2☆天才女军师 布兰妮", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
-      ["2☆史莱姆女王 娜芙拉拉", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
-      ["2☆魔法少女 托特拉(收集中)", "菁英", "光属性", "攻击者", "人类", "爆发力", "美乳", "削弱", "输出"],
+      ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
+      ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
+      ["2☆神官长 菲欧菈[211]", "菁英", "光属性", "人类", "治疗者", "美乳", "中体型", "回复"],
+      ["2☆女忍者 凛月[212]", "菁英", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发力"],
+      ["2☆剑圣 神无雪[213]", "菁英", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
+      ["2☆妖狐 静[214]", "菁英", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱", "干扰"],
+      ["2☆大将军 朱诺安[215]", "菁英", "闇属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
+      ["2☆天才女军师 布兰妮[216]", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
+      ["2☆史莱姆女王 娜芙拉拉[236]", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
+      ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "人类", "爆发力", "美乳", "削弱", "输出"],
 
-      ["1☆流浪魔法师 尤依", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
-      ["1☆龙女 伊维斯", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
-      ["1☆猫妖 娜娜", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
-      ["1☆美人鱼 玛莲", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
-      ["1☆犬人族 朵拉", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
-      ["1☆双蛇军团护士长 艾琳", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
-      ["1☆魅魔 撒芭丝", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
-      ["1☆闇黑精灵 索拉卡", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
+      ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
+      ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
+      ["1☆猫妖 娜娜[]", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
+      ["1☆美人鱼 玛莲[]", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
+      ["1☆犬人族 朵拉[]", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
+      ["1☆双蛇军团护士长 艾琳[]", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
+      ["1☆魅魔 撒芭丝[]", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
+      ["1☆闇黑精灵 索拉卡[]", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
 
-      ["0☆法斯帝国法师 佩托拉", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
-      ["0☆矮人战士 可儿", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
-      ["0☆精灵射手 奥菈", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
-      ["0☆魔族法师 玛努艾拉", "闇属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
-      ["0☆烈日国武士 桔梗", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "士兵"],
-      ["0☆蛇女 拉米亚", "火属性", "妨碍者", "美乳", "中体型", "削弱", "干扰", "士兵"],
-      ["0☆史莱姆娘 萝尔", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵", "回复"],
-      ["0☆鸟身女妖 哈比", "风属性", "妨碍者", "魔族", "美乳", "小体型", "干扰", "士兵"],
-      ["0☆法斯帝国士兵 赛莲", "闇属性", "守护者", "人类", "美乳", "中体型", "保护", "防御", "士兵"],
-      ["0☆牛女 米诺", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "生存力", "士兵"],
-      ["0☆魔族战士 芙蕾", "光属性", "守护者", "魔族", "美乳", "中体型", "保护", "士兵", "防御"],
-      ["0☆圣光骑士 玛蒂娜", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
+      ["0☆法斯帝国法师 佩托拉[]", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
+      ["0☆矮人战士 可儿[]", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
+      ["0☆精灵射手 奥菈[]", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
+      ["0☆魔族法师 玛努艾拉[]", "闇属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
+      ["0☆烈日国武士 桔梗[]", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "士兵"],
+      ["0☆蛇女 拉米亚[]", "火属性", "妨碍者", "美乳", "中体型", "削弱", "干扰", "士兵"],
+      ["0☆史莱姆娘 萝尔[]", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵", "回复"],
+      ["0☆鸟身女妖 哈比[]", "风属性", "妨碍者", "魔族", "美乳", "小体型", "干扰", "士兵"],
+      ["0☆法斯帝国士兵 赛莲[]", "闇属性", "守护者", "人类", "美乳", "中体型", "保护", "防御", "士兵"],
+      ["0☆牛女 米诺[]", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "生存力", "士兵"],
+      ["0☆魔族战士 芙蕾[]", "光属性", "守护者", "魔族", "美乳", "中体型", "保护", "士兵", "防御"],
+      ["0☆圣光骑士 玛蒂娜[]", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
       ["0☆双蛇军团士兵 夏琳", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
       ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
       ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
