--- a/index.html
+++ b/index.html
@@ -639,7 +639,8 @@
       "越战越强,火属性,守护者,亚人,治疗者",
       "魔族,保护,回复,贫乳,守护者",
       "输出,士兵,水属性,保护,美乳",
-      "水属性,越战越强,美乳,爆发力,巨乳"
+      "水属性,越战越强,美乳,爆发力,巨乳",
+      "魔族,中体型,回复,支援,水属性"
     ];
 
 //<body style="background:rgb(221, 241, 220)" id="body">
