--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
       ["2☆神官长 菲欧菈[211]", "菁英", "光属性", "人类", "治疗者", "美乳", "中体型", "回复"],
-      ["2☆女忍者 凛月[212]", "菁英", "风属性", "人类", "攻击者", "美乳", "小体型", "输出", "群体攻击", "爆发力"],
+      ["2☆女忍者 凛月[212]", "菁英", "风属性", "人类", "攻击者", "美乳", "中体型", "输出", "群体攻击", "爆发力"],
       ["2☆剑圣 神无雪[213]", "菁英", "火属性", "亚人", "攻击者", "美乳", "中体型", "越战越强", "削弱"],
       ["2☆妖狐 静[214]", "菁英", "水属性", "美乳", "妨碍者", "亚人", "小体型", "削弱", "干扰"],
       ["2☆大将军 朱诺安[215]", "菁英", "闇属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
