--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='3.6 繁简切换测试中'>
+  <meta name='description' content='3.8 作者 小r'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -477,38 +477,38 @@
       ["2☆大将军 朱诺安[215]", "菁英", "闇属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
       ["2☆天才女军师 布兰妮[216]", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
       ["2☆史莱姆女王 娜芙拉拉[236]", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
-      ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "人类", "爆发力", "美乳", "削弱", "输出"],
+      ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
-      ["1☆猫妖 娜娜[]", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
-      ["1☆美人鱼 玛莲[]", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
-      ["1☆犬人族 朵拉[]", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
-      ["1☆双蛇军团护士长 艾琳[]", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
-      ["1☆魅魔 撒芭丝[]", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
-      ["1☆闇黑精灵 索拉卡[]", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
+      ["1☆猫妖 娜娜[302]", "风属性", "攻击者", "魔族", "贫乳", "小体型", "输出"],
+      ["1☆美人鱼 玛莲[306]", "水属性", "治疗者", "亚人", "美乳", "中体型", "回复"],
+      ["1☆犬人族 朵拉[304]", "风属性", "守护者", "亚人", "美乳", "保护", "生存力", "中体型", "防御"],
+      ["1☆双蛇军团护士长 艾琳[301]", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
+      ["1☆魅魔 撒芭丝[305]", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
+      ["1☆闇黑精灵 索拉卡[308]", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
 
-      ["0☆法斯帝国法师 佩托拉[]", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
-      ["0☆矮人战士 可儿[]", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
-      ["0☆精灵射手 奥菈[]", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
-      ["0☆魔族法师 玛努艾拉[]", "闇属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
-      ["0☆烈日国武士 桔梗[]", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "士兵"],
-      ["0☆蛇女 拉米亚[]", "火属性", "妨碍者", "美乳", "中体型", "削弱", "干扰", "士兵"],
-      ["0☆史莱姆娘 萝尔[]", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵", "回复"],
-      ["0☆鸟身女妖 哈比[]", "风属性", "妨碍者", "魔族", "美乳", "小体型", "干扰", "士兵"],
-      ["0☆法斯帝国士兵 赛莲[]", "闇属性", "守护者", "人类", "美乳", "中体型", "保护", "防御", "士兵"],
-      ["0☆牛女 米诺[]", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "生存力", "士兵"],
-      ["0☆魔族战士 芙蕾[]", "光属性", "守护者", "魔族", "美乳", "中体型", "保护", "士兵", "防御"],
-      ["0☆圣光骑士 玛蒂娜[]", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
-      ["0☆双蛇军团士兵 夏琳", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
-      ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
-      ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
-      ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵", "美乳", "输出", "生存力"],
-      ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
-      ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
-      ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
-      ["0☆惩戒天使(收集中)", "水属性", "守护者", "士兵", "生存力"],
-      ["0☆福音天使(收集中)", "水属性", "治疗者", "士兵"],
+      ["0☆法斯帝国法师 佩托拉[402]", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
+      ["0☆矮人战士 可儿[408]", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
+      ["0☆精灵射手 奥菈[407]", "风属性", "攻击者", "亚人", "美乳", "中体型", "输出", "士兵"],
+      ["0☆魔族法师 玛努艾拉[404]", "闇属性", "攻击者", "中体型", "魔族", "美乳", "输出", "士兵"],
+      ["0☆烈日国武士 桔梗[405]", "火属性", "妨碍者", "人类", "美乳", "中体型", "削弱", "士兵"],
+      ["0☆蛇女 拉米亚[414]", "火属性", "妨碍者", "美乳", "中体型", "削弱", "干扰", "士兵"],
+      ["0☆史莱姆娘 萝尔[412]", "水属性", "妨碍者", "魔族", "美乳", "小体型", "削弱", "生存力", "士兵", "回复"],
+      ["0☆鸟身女妖 哈比[415]", "风属性", "妨碍者", "魔族", "美乳", "中体型", "干扰", "士兵"],
+      ["0☆法斯帝国士兵 赛莲[401]", "闇属性", "守护者", "人类", "美乳", "中体型", "保护", "防御", "士兵"],
+      ["0☆牛女 米诺[413]", "风属性", "守护者", "亚人", "巨乳", "中体型", "干扰", "保护", "防御", "生存力", "士兵"],
+      ["0☆魔族战士 芙蕾[403]", "光属性", "守护者", "魔族", "美乳", "中体型", "保护", "士兵", "防御"],
+      ["0☆圣光骑士 玛蒂娜[410]", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
+      ["0☆双蛇军团士兵 夏琳[409]", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
+      ["0☆烈日国巫女 枫[406]", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
+      ["0☆主神教团僧兵 克蕾雅[411]", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
+      ["0☆试做机三号[422]", "光属性", "攻击者", "小体型", "士兵", "美乳", "输出", "生存力"],
+      ["0☆法斯菁英近卫 安娜[416]", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
+      ["0☆法斯高阶法师 诺诺可[418]", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
+      ["0☆法斯精锐骑士 布兰[417]", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
+      ["0☆惩戒天使(收集中)[419]", "水属性", "守护者", "士兵", "生存力"],
+      ["0☆福音天使(收集中)[420]", "水属性", "治疗者", "士兵"],
     ]
 
     var propheticWords = ["中体型,亚人,削弱,回击,领袖",
@@ -641,17 +641,19 @@
       "输出,士兵,水属性,保护,美乳",
       "水属性,越战越强,美乳,爆发力,巨乳",
       "魔族,中体型,回复,支援,水属性",
-      "爆发力,越战越强,小体型，暗属性,风属性"
-    ];
+      "回复,妨碍者,中体型,干扰,小体型",
+      "爆发力,越战越强,小体型,暗属性,风属性",
+      "防御,攻击者,人类,巨乳,爆发力",
 
-//<body style="background:rgb(221, 241, 220)" id="body">
+    ];
 
   </script>
   <script type="text/javascript" language="javascript" src="transform.js"></script>
 
 <body style="background:rgb(230, 230, 255)" id="body">
+
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 3.7 by 小r</h1><small>邀请码 USHL2U</small>
+    <h1 style="display: inline;">全境征才计算器 3.8 by 小r</h1><small>邀请码 USHL2U</small>
     <button type="button" id="langSwitcher" class="btn_language" onclick="switchST()">繁简切换</button>
     <br />
 
@@ -713,6 +715,9 @@
         <h1>新版领袖是橙色的，记得选中！！！拉满9小时！！！</h1>
       </font>
       我已经收到3起没选领袖的惨案了<br />
+      3.8 修正哈比的体型为 中体型，因此狐狸增加了小体型+干扰的必出词条<br />
+      叶喵喵酱汇报 魔法少女 有中体型词缀<br />
+      根据统计每天都会增加约3组新词组合，正在考虑如何找出旧词组合并删除<br />
       3.7 美化<br />
       3.6 一些细碎的更新<br />
       注意到一些鬼畜用户一行只能显示2个按钮，并不知道原因但是我尝试进行了简单的修复（指缩小按钮间距）<br />
