吸血鬼词条更新

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
       ["3☆天使长 圣米勒[107]", "光属性", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
-      ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "领袖", "巨乳(?)", "输出", "爆发力"],
+      ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
       ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
@@ -719,6 +719,7 @@
       我已经收到3起没选领袖的惨案了<br />
       3.8 修正哈比的体型为 中体型，因此狐狸增加了小体型+干扰的必出词条<br />
       叶喵喵酱汇报 魔法少女 有中体型词缀<br />
+      落尘堕羽汇报 吸血鬼 有中体型词缀<br />
       根据统计每天都会增加约3组新词组合，正在考虑如何找出旧词组合并删除<br />
       3.7 美化<br />
       3.6 一些细碎的更新<br />
