--- a/index.html
+++ b/index.html
@@ -644,7 +644,12 @@
       "回复,妨碍者,中体型,干扰,小体型",
       "爆发力,越战越强,小体型,暗属性,风属性",
       "防御,攻击者,人类,巨乳,爆发力",
-      "攻击者,保护,回复,火属性,治疗者"
+      "攻击者,保护,回复,火属性,治疗者",
+      "越战越强,干扰,群体攻击,中体型,生存力", //10.27
+      "攻击者,支援,守护者,火属性,魔族",
+      "越战越强,人类,亚人,贫乳,士兵"
+      
+
     ];
 
   
