--- a/index.html
+++ b/index.html
@@ -646,7 +646,8 @@
       "防御,攻击者,人类,巨乳,爆发力",
       "攻击者,保护,回复,火属性,治疗者",
       "越战越强,干扰,群体攻击,中体型,生存力", //10.27
-      "攻击者,支援,守护者,火属性,魔族"      
+      "攻击者,支援,守护者,火属性,魔族",
+      "辅助者,风属性,菁英,输出,美乳" 
 
     ];
 
