--- a/index.html
+++ b/index.html
@@ -648,7 +648,8 @@
       "越战越强,干扰,群体攻击,中体型,生存力", //10.27
       "攻击者,支援,守护者,火属性,魔族",
       "辅助者,风属性,菁英,输出,美乳",
-      "小体型,亚人,攻击者,妨碍者,削弱" //10.29
+      "小体型,亚人,攻击者,妨碍者,削弱", //10.29
+      "火属性,保护,治疗,妨碍者,回复"  //11.1
 
     ];
 
