--- a/index.html
+++ b/index.html
@@ -758,9 +758,9 @@
       其他更新：为不同版本的主页背景更换了不同的颜色,微调词缀位置<br />
       3.2 由喵汇报 为剑圣添加了美乳-越战越强词条<br />
       之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
-      最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a>
+      最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
+      <a href="http://47.99.93.37/tkfmtools.apk">更新时间11月2日</a><br/>
     </div>
-    <div hidden>如你所见本页面没有任何加密，因此请勿随意盗用本页面</div>
   </div>
 </body>
 
