新增天使词条和更新app

--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
       ["0☆法斯菁英近卫 安娜[416]", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
       ["0☆法斯高阶法师 诺诺可[418]", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰[417]", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
-      ["0☆惩戒天使(收集中)[419]", "水属性", "守护者", "士兵", "生存力"],
-      ["0☆福音天使(收集中)[420]", "水属性", "治疗者", "士兵"],
+      ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
+      ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
     ]
 
     var propheticWords = ["中体型,亚人,削弱,回击,领袖",
@@ -759,7 +759,7 @@
       3.2 由喵汇报 为剑圣添加了美乳-越战越强词条<br />
       之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
-      <a href="http://47.99.93.37/tkfmtools.apk">更新时间11月2日</a><br/>
+      <a href="http://47.99.93.37/tkfmtools.apk">更新时间11月8日</a><br/>
     </div>
   </div>
 </body>
