修复循环调用bug

--- a/index.html
+++ b/index.html
@@ -279,7 +279,6 @@
           break;
         }
       }
-      searchAndShow();
     }
 
     /***********************************搜索系统代码******************************************/
@@ -642,7 +641,7 @@
       "水属性,越战越强,美乳,爆发力,巨乳",
       "魔族,中体型,回复,支援,水属性",
       "回复,妨碍者,中体型,干扰,小体型",
-      "爆发力,越战越强,小体型,暗属性,风属性",
+      "爆发力,越战越强,小体型,闇属性,风属性",
       "防御,攻击者,人类,巨乳,爆发力",
       "攻击者,保护,回复,火属性,治疗者",
       "越战越强,干扰,群体攻击,中体型,生存力", //10.27
