--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
           break;
         }
       }
+      searchAndShow();
     }
 
     /***********************************搜索系统代码******************************************/
