添加布魔工具箱链接

--- a/index.html
+++ b/index.html
@@ -722,41 +722,11 @@
       <font color="red">
         <h1>新版领袖是橙色的，记得选中！！！拉满9小时！！！</h1>
       </font>
-      我已经收到3起没选领袖的惨案了<br />
-      3.8 修正哈比的体型为 中体型，因此狐狸增加了小体型+干扰的必出词条<br />
-      叶喵喵酱汇报 魔法少女 有中体型词缀<br />
-      落尘堕羽汇报 吸血鬼 有中体型词缀<br />
-      根据统计每天都会增加约3组新词组合，正在考虑如何找出旧词组合并删除<br />
-      3.7 美化<br />
-      3.6 一些细碎的更新<br />
-      注意到一些鬼畜用户一行只能显示2个按钮，并不知道原因但是我尝试进行了简单的修复（指缩小按钮间距）<br />
-      繁简转换按钮<br />
-      之前是需要3秒内选中3个才会触发连击，感觉有点怪我取消了3秒的条件<br />
-      繁简切换测试中，可能会有bug<br />
-      <h1>3.5 计算器词缀更新中</h1>
-      目前需要 美乳+爆发力，有概率出SR。目前已经出了一个SR了，希望有更多实锤<br />
-      天使究竟是不是亚人？需要实锤<br />
-      已确定：<br />
-      食梦：亚人 削弱 贫乳 爆发力划掉后出了一个，大概率没有爆发力，先去掉了<br />
-      大天使：支援<br />
-      血族：爆发力 魔族<br />
-      托特拉：美乳 削弱 输出 爆发力划掉了2次 越战越强划掉了3次 已经删除越战越强 美乳+爆发力出货1次(概率很低)，先加上爆发力后续再验证<br />
-      惩戒天使：生存力 没有防御 没有保护<br />
-      <b></b>
-      <h1>3.3 新角色会在29日后加入，以下内容较为重要<br /></h1>
-      (1) 所有角色词条都是玩家猜出来的，更新初期，词条全部未知，试验词条有成本，请自愿参加或等待。<br />
-      (2) 我已经提前加入了词条。这些词条是我猜的，所以以问号标记，如果你选了该词条出货了，
-      请于天下布魔ma吧贴吧专楼反馈，我会把问号去掉，如果没出货，我会把词条去掉（被划掉的，需要有很多的人被划掉才能确认是真的没有）<br />
-      最好给出出货前和出货截图<br />
-      (3) 对于SSR SR 我都尽量猜了大量词条，如果你觉得我还有没加的，同样反馈给我<br />
-      对于R卡，我不加入任何不确定的词条，以免污染了SR的必出词条。如果你出货了新R卡，且这个词条网页没有标记，也请反馈给我<br />
-      (4) 因为已经有国内站点了，且接下来更新极快，离线版短期内不会更新<br />
-
+      <font color="red">布魔工具箱下载地址：</font><a href="https://gitee.com/chih-lung-chen/tkfm-tools/releases">点击这里</a>
       对于无法翻墙的玩家 提供了一个国内地址，需要的记得保存 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
       <br />
 
       其他更新：为不同版本的主页背景更换了不同的颜色,微调词缀位置<br />
-      3.2 由喵汇报 为剑圣添加了美乳-越战越强词条<br />
       之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
       <a href="http://47.99.93.37/tkfmtools.apk">更新时间11月8日</a><br/>
