--- a/index.html
+++ b/index.html
@@ -723,13 +723,11 @@
         <h1>新版领袖是橙色的，记得选中！！！拉满9小时！！！</h1>
       </font>
       <font color="red">布魔工具箱下载地址：</font><a href="https://gitee.com/chih-lung-chen/tkfm-tools/releases">点击这里</a>
-      对于无法翻墙的玩家 提供了一个国内地址，需要的记得保存 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
+      对于无法翻墙的玩家 提供了一个网页版国内地址，需要的记得保存 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
       <br />
 
-      其他更新：为不同版本的主页背景更换了不同的颜色,微调词缀位置<br />
       之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
       最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
-      <a href="http://47.99.93.37/tkfmtools.apk">更新时间11月8日</a><br/>
     </div>
   </div>
 </body>
