--- a/index.html
+++ b/index.html
@@ -722,8 +722,8 @@
       <font color="red">
         <h1>新版领袖是橙色的，记得选中！！！拉满9小时！！！</h1>
       </font>
-      <font color="red">布魔工具箱下载地址：</font><a href="https://gitee.com/chih-lung-chen/tkfm-tools/releases">点击这里</a>
-      对于无法翻墙的玩家 提供了一个网页版国内地址，需要的记得保存 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
+      <font color="red">布魔工具箱下载地址：</font><a href="https://gitee.com/chih-lung-chen/tkfm-tools/releases">点击这里</a><br/>
+      本网页计算器国内免翻墙地址 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
       <br />
 
       之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
