--- a/index.html
+++ b/index.html
@@ -649,7 +649,9 @@
       "攻击者,支援,守护者,火属性,魔族",
       "辅助者,风属性,菁英,输出,美乳",
       "小体型,亚人,攻击者,妨碍者,削弱", //10.29
-      "火属性,保护,治疗者,妨碍者,回复"  //11.1
+      "火属性,保护,治疗者,妨碍者,回复",  //11.1
+      "魔族,生存力,领袖,爆发力,治疗者",  //11.11
+      "干扰,辅助者,生存力,风属性,亚人"
 
     ];
 
