--- a/index.html
+++ b/index.html
@@ -651,7 +651,8 @@
       "小体型,亚人,攻击者,妨碍者,削弱", //10.29
       "火属性,保护,治疗者,妨碍者,回复",  //11.1
       "魔族,生存力,领袖,爆发力,治疗者",  //11.11
-      "干扰,辅助者,生存力,风属性,亚人"
+      "干扰,辅助者,生存力,风属性,亚人",
+      "守护者,回复,光属性,中体型,生存力"
 
     ];
 
