更新工具箱地址

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
       <h1><font color="#FF0000">领</font><font color="#F4000B">袖</font><font color="#E90016">词</font><font color="#DE0021">条</font><font color="#D3002C">是</font><font color="#C80037">橙</font><font color="#BD0042">色</font><font color="#B2004D">的</font><font color="#A70058">，</font><font color="#9C0063">记</font><font color="#91006E">得</font><font color="#860079">拉</font><font color="#7B0084">满</font><font color="#70008F">9</font><font color="#65009A">小</font><font color="#5A00A5">时</font><font color="#4F00B0">并</font><font color="#4400BB">选</font><font color="#3900C6">中</font><font color="#2E00D1">！</font><font color="#2300DC">！</font><font color="#1800E7">！</font></h1>
       <h1><font color="#FF0000">领</font><font color="#F4000B">袖</font><font color="#E90016">词</font><font color="#DE0021">条</font><font color="#D3002C">是</font><font color="#C80037">橙</font><font color="#BD0042">色</font><font color="#B2004D">的</font><font color="#A70058">，</font><font color="#9C0063">记</font><font color="#91006E">得</font><font color="#860079">拉</font><font color="#7B0084">满</font><font color="#70008F">9</font><font color="#65009A">小</font><font color="#5A00A5">时</font><font color="#4F00B0">并</font><font color="#4400BB">选</font><font color="#3900C6">中</font><font color="#2E00D1">！</font><font color="#2300DC">！</font><font color="#1800E7">！</font></h1>
       
-      <font color="red">布魔工具箱下载地址：</font><a href="https://gitee.com/chih-lung-chen/tkfm-tools/releases">点击这里</a><br/>
+      <font color="red">布魔工具箱下载地址：</font><a href="https://www.bilibili.com/video/BV1T3411C7Zd">点击这里</a><br/>
       本网页计算器国内免翻墙地址 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
       <br />
 
