--- a/index.html
+++ b/index.html
@@ -654,8 +654,9 @@
       "干扰,辅助者,生存力,风属性,亚人",
       "守护者,回复,光属性,中体型,生存力",
       "守护者,输出,巨乳,水属性,贫乳",   //11.17
-      "输出,闇属性,防御,削弱,水属性"  
-
+      "输出,闇属性,防御,削弱,水属性",
+      "贫乳,防御,辅助者,领袖,回复", //11.23
+      "妨碍者,魔族,削弱,防御,越战越强",   //12.1
     ];
 
   
