--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
     </table>
 
     <div id="anotation">
-    
+      <h1><font color="#FF0000">每</font><font color="#ED0012">天</font><font color="#DB0024">常</font><font color="#C90036">驻</font><font color="#B70048">有</font><font color="#A5005A">免</font><font color="#93006C">费</font><font color="#81007E">1</font><font color="#6F0090">0</font><font color="#5D00A2">抽</font><font color="#4B00B4">记</font><font color="#3900C6">得</font><font color="#2700D8">用</font><font color="#1500EA">掉</font></h1>
       <font color="red">布魔工具箱下载地址：</font><a href="https://www.bilibili.com/video/BV1T3411C7Zd">点击这里</a><br/>
       本网页计算器国内免翻墙地址 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
       <br />
