加入新角色

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='3.8 作者 小r'>
+  <meta name='description' content='3.9 作者 小r 新词条募集中'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -467,6 +467,9 @@
       ["3☆天使长 圣米勒[107]", "光属性", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
       ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
       ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱"],
+      ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型(?)", "巨乳(?)", "防御(?)", "回击(?)", "生存力(?)"],
+      ["3☆ 极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
+      ["3☆ 音速魅影 祈", "风属性", "攻击者", "领袖"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -478,6 +481,8 @@
       ["2☆天才女军师 布兰妮[216]", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
       ["2☆史莱姆女王 娜芙拉拉[236]", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
+      ["2☆最后的银龙 普利特拉", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
+      ["2☆刺针 嘉维尔", "风属性", "攻击者", "精英", "美乳"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -657,7 +662,9 @@
       "输出,闇属性,防御,削弱,水属性",
       "贫乳,防御,辅助者,领袖,回复", //11.23
       "妨碍者,魔族,削弱,防御,越战越强",   //12.1
+      "削弱,光属性,菁英,巨乳,暗属性"  //12.30
     ];
+
 
   
   //<body style="background:rgb(221, 241, 220)" id="body">
@@ -667,7 +674,7 @@
 <body style="background:rgb(230, 230, 255)" id="body">
 
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 3.8 by 小r</h1><small>邀请码 USHL2U</small>
+    <h1 style="display: inline;">全境征才计算器 3.9 by 小r</h1><small>邀请码 USHL2U</small>
     <button type="button" id="langSwitcher" class="btn_language" onclick="switchST()">繁简切换</button>
     <br />
 
@@ -725,7 +732,7 @@
     </table>
 
     <div id="anotation">
-      <h1><font color="#FF0000">每</font><font color="#ED0012">天</font><font color="#DB0024">常</font><font color="#C90036">驻</font><font color="#B70048">有</font><font color="#A5005A">免</font><font color="#93006C">费</font><font color="#81007E">1</font><font color="#6F0090">0</font><font color="#5D00A2">抽</font><font color="#4B00B4">记</font><font color="#3900C6">得</font><font color="#2700D8">用</font><font color="#1500EA">掉</font></h1>
+      <h1>已加入新角色的部分词条</h1>
       <font color="red">布魔工具箱下载地址：</font><a href="https://www.bilibili.com/video/BV1T3411C7Zd">点击这里</a><br/>
       本网页计算器国内免翻墙地址 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
       <br />
