--- a/index.html
+++ b/index.html
@@ -460,16 +460,16 @@
       ["3☆矮人王 兰儿[105]", "领袖", "水属性", "亚人", "小体型", "贫乳", "攻击者", "爆发力", "输出"],
       ["3☆法斯公主 露露[106]", "领袖", "风属性", "人类", "治疗者", "回复"],
       ["3☆魔王 伊布力斯[103]", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
-      ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
+      ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱", "中体型"],
       ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
       ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
       ["3☆天使长 圣米勒[107]", "光属性", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
       ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
-      ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱"],
+      ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "中体型"],
       ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型(?)", "巨乳(?)", "防御(?)", "回击(?)", "生存力(?)"],
-      ["3☆ 极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
-      ["3☆ 音速魅影 祈", "风属性", "攻击者", "领袖"],
+      ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
+      ["3☆音速魅影 祈", "风属性", "攻击者", "领袖"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
