--- a/index.html
+++ b/index.html
@@ -464,12 +464,12 @@
       ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
       ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
-      ["3☆天使长 圣米勒[107]", "光属性", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
+      ["3☆天使长 圣米勒[107]", "光属性", "中体型", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
       ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
       ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "中体型"],
-      ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型(?)", "巨乳(?)", "防御(?)", "回击(?)", "生存力(?)"],
+      ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
       ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
-      ["3☆音速魅影 祈", "风属性", "攻击者", "领袖"],
+      ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -481,8 +481,8 @@
       ["2☆天才女军师 布兰妮[216]", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
       ["2☆史莱姆女王 娜芙拉拉[236]", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
-      ["2☆最后的银龙 普利特拉", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
-      ["2☆刺针 嘉维尔", "风属性", "攻击者", "精英", "美乳"],
+      ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
+      ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
