--- a/index.html
+++ b/index.html
@@ -662,7 +662,8 @@
       "输出,闇属性,防御,削弱,水属性",
       "贫乳,防御,辅助者,领袖,回复", //11.23
       "妨碍者,魔族,削弱,防御,越战越强",   //12.1
-      "削弱,光属性,菁英,巨乳,暗属性"  //12.30
+      "削弱,光属性,菁英,巨乳,闇属性",  //12.30
+      "中体型,贫乳,人类,攻击者,领袖"//2.1附近
     ];
 
 
