添加论坛导流

--- a/index.html
+++ b/index.html
@@ -733,14 +733,11 @@
     </table>
 
     <div id="anotation">
-      <h1>已加入新角色的部分词条</h1>
-      <font color="red">布魔工具箱下载地址：</font><a href="https://www.bilibili.com/video/BV1T3411C7Zd">点击这里</a><br/>
-      本网页计算器国内免翻墙地址 <a href="http://47.99.93.37/">http://47.99.93.37/</a><br />
-      <br />
+      <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
 
-      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
-      最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
-    </div>
+     之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
+     最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
+   </div>
   </div>
 </body>
 
