--- a/index.html
+++ b/index.html
@@ -664,7 +664,8 @@
       "妨碍者,魔族,削弱,防御,越战越强",   //12.1
       "削弱,光属性,菁英,巨乳,闇属性",  //12.30
       "中体型,贫乳,人类,攻击者,领袖",//2.1附近
-      "输出,领袖,守护者,亚人,妨碍者"  //4.12
+      "输出,领袖,守护者,亚人,妨碍者",  //4.12
+      "防御,火属性,越战越强,治疗者,回复"//4.25
     ];
 
 
