更新通知 千鹤中体型由夜无月确认

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       ["3☆蛇女之后 梅斯米奈雅[137]", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱", "中体型"],
       ["3☆KS-VIII 魔人偶[131]", "闇属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
       ["3☆煌星 妲斯艾菲娜[157]", "闇属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
-      ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
+      ["3☆复生公主 千鹤[128]", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型", "魔族"],
       ["3☆天使长 圣米勒[107]", "光属性", "中体型", "攻击者", "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
       ["3☆千年血族 洛缇亚[139]", "闇属性", "攻击者", "魔族", "中体型", "领袖", "巨乳(?)", "输出", "爆发力"],
       ["3☆食梦 阿尔蒂雅[133]", "闇属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "中体型"],
@@ -735,10 +735,10 @@
     </table>
 
     <div id="anotation">
+      <h1><font color="red">因为域名续费好贵，6月开始本网站地址将更改为tkfm.xyz</font></h1>
       <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
 
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
-     最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a><br/>
    </div>
   </div>
 </body>
