--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
   </style>
 
   <script type="text/javascript">
+
+  alert('本网站域名即将更换为txbm.onLine，再弹窗通知一天，6月4日18:00更换。另一个地址：http://47.99.93.37/不受影响')
     var tags = [];  //收集当前选中的tag
     var ans = [];   //收集最后的结果
     var propheticWords = [];  //收集固有词条组合模式用于预测
