域名没改掉，再看看

--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
 
   <script type="text/javascript">
 
-  alert('本网站域名即将更换为txbm.onLine，再弹窗通知一天，6月4日18:00更换。另一个地址：http://47.99.93.37/不受影响')
     var tags = [];  //收集当前选中的tag
     var ans = [];   //收集最后的结果
     var propheticWords = [];  //收集固有词条组合模式用于预测
@@ -737,7 +736,7 @@
     </table>
 
     <div id="anotation">
-      <h1><font color="red">之前的域名被广告狗抢走啦，现在计划新域名是txbm.onLine。计划在6月3日21点转换。</font></h1>
+      <h1><font color="red">域名切换完成。</font></h1>
       <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
 
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
