--- a/index.html
+++ b/index.html
@@ -736,7 +736,9 @@
     </table>
 
     <div id="anotation">
-      <h1><font color="red">域名切换完成。</font></h1>
+      <h1>曝光黑店：好再来游戏氪金商城</h1>
+      该商店会在用户购买点卡后，偷偷将用户点卡拿去官网兑换积分。导致用户自己没法兑换。
+      另外充值推荐gash点卡，具体可以去nga查看方法。
       <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
 
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
