--- a/index.html
+++ b/index.html
@@ -736,6 +736,8 @@
     </table>
 
     <div id="anotation">
+      <h1>有关新角色的加入</h1>
+      参考：<a href=https://nga.178.com/read.php?tid=32501219&_ff=-40525887">详细说明</a><br/>
       <h1>曝光黑店：好再来游戏氪金商城</h1>
       该商店会在用户购买点卡后，偷偷将用户点卡拿去官网兑换积分。导致用户自己没法兑换。也就是每单多薅1%的羊毛。<br/>
 
