更新新角色词条

--- a/index.html
+++ b/index.html
@@ -471,6 +471,9 @@
       ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
       ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
       ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
+      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "领袖"],
+      ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "领袖"],
+      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
