--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@
       ["3☆堕龙 凯西菲娜", "水属性", "守护者", "领袖", "亚人", "中体型", "巨乳", "防御", "回击", "生存力(?)"],
       ["3☆极乐之鬼 伊吹朱点", "火属性", "攻击者", "领袖", "中体型", "输出", "亚人", "贫乳"],
       ["3☆音速魅影 祈", "风属性", "攻击者", "亚人", "中体型", "领袖", "输出", "爆发力"],
-      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "领袖"],
-      ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "领袖"],
-      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖"],
+      ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖"],
+      ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
+      ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -739,15 +739,12 @@
     </table>
 
     <div id="anotation">
-      <h1>有关新角色的加入</h1>
-      参考：<a href=https://nga.178.com/read.php?tid=32501219&_ff=-40525887">详细说明</a><br/>
+      实验性的提供<b>工口服</b>的97折慢速代充服务，有需要的加群160194754<br/>
       <h1>曝光黑店：好再来游戏氪金商城</h1>
       该商店会在用户购买点卡后，偷偷将用户点卡拿去官网兑换积分。导致用户自己没法兑换。也就是每单多薅1%的羊毛。<br/>
-
       兑换积分教程：<a href=https://nga.178.com/read.php?tid=32215278">访问地址</a><br/>
-      工口服非常便宜（88折）的充值教程：<a href=https://nga.178.com/read.php?tid=31897610">访问地址</a><br/>
       <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
-
+      新角色（勇者）已经加入了，法雅还没进全境！
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
    </div>
   </div>
