--- a/index.html
+++ b/index.html
@@ -739,9 +739,7 @@
     </table>
 
     <div id="anotation">
-      <h1>曝光黑店：好再来游戏氪金商城</h1>
-      该商店会在用户购买点卡后，偷偷将用户点卡拿去官网兑换积分。导致用户自己没法兑换。也就是每单多薅1%的羊毛。<br/>
-      兑换积分教程：<a href=https://nga.178.com/read.php?tid=32215278">访问地址</a><br/>
+      现在所有游戏内充值方式寄完了，无论工口还是ero都只能用云闪付。
       <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
       新角色（勇者）已经加入了，法雅还没进全境！
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
