新角色加入！

--- a/index.html
+++ b/index.html
@@ -474,6 +474,11 @@
       ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳"],
+      ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复(?)", "领袖"],
+      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖"],
+      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "人类"],
+      ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)"], 
+      ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -487,6 +492,8 @@
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
+      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人"],
+      ["1☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳(?)", "小体型(?)"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -496,6 +503,7 @@
       ["1☆双蛇军团护士长 艾琳[301]", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
       ["1☆魅魔 撒芭丝[305]", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
       ["1☆闇黑精灵 索拉卡[308]", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
+      ["1☆白蔷薇 伊艾", "光属性","治疗者", "人类(?)", "贫乳", "小体型"],
 
       ["0☆法斯帝国法师 佩托拉[402]", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
       ["0☆矮人战士 可儿[408]", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
@@ -517,7 +525,7 @@
       ["0☆法斯高阶法师 诺诺可[418]", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰[417]", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
       ["0☆惩戒天使[419]", "水属性", "守护者", "士兵", "生存力", "中体型", "回击", "群体攻击", "美乳", "亚人"],
-      ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"],
+      ["0☆福音天使[420]", "水属性", "治疗者", "士兵", "保护", "美乳", "中体型"]
     ]
 
     var propheticWords = ["中体型,亚人,削弱,回击,领袖",
@@ -669,7 +677,9 @@
       "削弱,光属性,菁英,巨乳,闇属性",  //12.30
       "中体型,贫乳,人类,攻击者,领袖",//2.1附近
       "输出,领袖,守护者,亚人,妨碍者",  //4.12
-      "防御,火属性,越战越强,治疗者,回复"//4.25
+      "防御,火属性,越战越强,治疗者,回复",//4.25
+      "贫乳,防御,领袖,巨乳,水属性",//22年11.30
+      "风属性,领袖,越战越强,保护,支援"//22年11.30
     ];
 
 
@@ -739,10 +749,23 @@
     </table>
 
     <div id="anotation">
-      现在所有游戏内充值方式寄完了，无论工口还是ero都只能用云闪付。
-      <h1><font color="red">NGA论坛天下布魔板块已经正式开放了</font>，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a></h1>
-      新角色（勇者）已经加入了，法雅还没进全境！
+    <h1>新词条·新词组收集中！已加入的词条</h1>
+    新词组：贫乳 防御 领袖 巨乳 水属性<br/>
+    风属性 领袖 越战越强 保护 支援<br/>
+    （按惯例，其中必定藏有新角色的必出词条）<br/>
+    伪娘：光属性 治疗者 贫乳 小体型 人类（虽然没有词条报告，但是大概率是人类，下同）<br/>
+    萤：水属性  治疗者 支援 人类<br/>
+    舞娘：光属性 辅助者 亚人 <br/>
+    雪兰瑚： 水属性 治疗者 支援 亚人  <br/>
+    法雅：火属性 治疗者 魔族 领袖  魔族<br/>
+    女仆长：光属性 辅助者 回复 人类<br/>
+    魔女：暗属性 攻击者 （巨乳？）  人类or亚人不明<br/>
+    莲：火属性 治疗者 回复（？） 人类<br/>
+    更多词条请去贴吧或nga发帖反馈<br/>
+    NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
+     当今游戏推荐充值方式：gash点卡，在淘宝买了后直接在充值页面用就可以了。方案2还是云闪付。
+
    </div>
   </div>
 </body>
