补提交版本号

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='3.9 作者 小r 新词条募集中'>
+  <meta name='description' content='3.10 作者 小r 新词条募集中'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -684,7 +684,7 @@
 
 
   
-  //<body style="background:rgb(221, 241, 220)" id="body">
+  //<body style="background:rgb(227, 241, 227" id="body">
   </script>
   <script type="text/javascript" language="javascript" src="transform.js"></script>
 
