--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
       ["2☆魔法少女 托特拉[238]", "菁英", "光属性", "攻击者", "中体型", "人类", "爆发力", "美乳", "削弱", "输出"],
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
-      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人"],
-      ["1☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳(?)", "小体型(?)"],
+      ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)"],
+      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳(?)", "小体型(?)"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
