--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
       ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)"],
-      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳(?)", "小体型(?)"],
+      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳", "小体型(?)"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -754,7 +754,7 @@
     风属性 领袖 越战越强 保护 支援<br/>
     （按惯例，其中必定藏有新角色的必出词条）<br/>
     伪娘：光属性 治疗者 贫乳 小体型 人类（虽然没有词条报告，但是大概率是人类，下同）<br/>
-    萤：水属性  治疗者 支援 人类<br/>
+    萤：水属性  治疗者 支援 人类 贫乳<br/>
     舞娘：光属性 辅助者 亚人 <br/>
     雪兰瑚： 水属性 治疗者 支援 亚人  <br/>
     法雅：火属性 治疗者 魔族 领袖  魔族<br/>
