--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       ["2☆最后的银龙 普利特拉", "闇属性", "菁英", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
       ["2☆刺针 嘉维尔", "风属性", "攻击者", "菁英", "美乳", "人类", "中体型", "输出"],
       ["2☆精灵舞者 塔诺西雅", "菁英", "光属性","辅助者","亚人", "回复(?)"],
-      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳", "小体型(?)"],
+      ["2☆工会看板娘 小萤", "菁英",  "水属性","治疗者", "支援", "人类", "贫乳", "小体型"],
 
       ["1☆流浪魔法师 尤依[307]", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯[303]", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -503,7 +503,7 @@
       ["1☆双蛇军团护士长 艾琳[301]", "光属性", "治疗者", "人类", "巨乳", "中体型", "回复"],
       ["1☆魅魔 撒芭丝[305]", "闇属性", "妨碍者", "魔族", "美乳", "干扰", "削弱", "中体型"],
       ["1☆闇黑精灵 索拉卡[308]", "闇属性", "妨碍者", "亚人", "中体型", "削弱", "美乳"],
-      ["1☆白蔷薇 伊艾", "光属性","治疗者", "人类(?)", "贫乳", "小体型"],
+      ["1☆白蔷薇 伊艾", "光属性","治疗者", "人类", "贫乳", "小体型"],
 
       ["0☆法斯帝国法师 佩托拉[402]", "光属性", "攻击者", "人类", "贫乳", "中体型", "群体攻击", "输出", "士兵"],
       ["0☆矮人战士 可儿[408]", "水属性", "攻击者", "亚人", "贫乳", "小体型", "输出", "爆发力", "士兵"],
