添加中体型

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
       ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳"],
-      ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复", "领袖"],
+      ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
       ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "人类"],
       ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)"], 
