补咪噜 补法雅回复

--- a/index.html
+++ b/index.html
@@ -474,9 +474,10 @@
       ["3☆古代勇者 乌鲁塔", "风属性", "守护者", "人类", "中体型", "领袖"],
       ["3☆现代勇者 神田绫音", "光属性", "攻击者", "人类", "爆发力", "输出", "领袖", "中体型"],
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳"],
+      ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
-      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖"],
-      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "人类"],
+      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复"],
+      ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "魔族(?)"],
       ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
 
@@ -757,8 +758,8 @@
     萤：水属性  治疗者 支援 人类 贫乳<br/>
     舞娘：光属性 辅助者 亚人 <br/>
     雪兰瑚： 水属性 治疗者 支援 亚人  <br/>
-    法雅：火属性 治疗者 魔族 领袖  魔族<br/>
-    女仆长：光属性 辅助者 回复 人类<br/>
+    法雅：火属性 治疗者 魔族 领袖  魔族 回复<br/>
+    女仆长：光属性 辅助者 回复 魔族（？）<br/>
     魔女：暗属性 攻击者 （巨乳？）  人类or亚人不明<br/>
     莲：火属性 治疗者 回复（？） 人类<br/>
     更多词条请去贴吧或nga发帖反馈<br/>
