添加夜星的基础数据

--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "魔族(?)"],
       ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
+      ["3☆夜星 狄", "领袖", "风属性","攻击者","人类"],
 
       ["2☆魔管家 艾可[209]", "菁英", "闇属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜[210]", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
