为法雅添加支援

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       ["3☆未来勇者 牧爱菈", "风属性", "妨碍者", "人类", "中体型", "削弱", "领袖", "贫乳"],
       ["3☆猫娘Vtuber 杏仁咪噜","攻击者","亚人","爆发力","小体型","贫乳","领袖","火属性"],
       ["3☆异国商人 雪蘭瑚", "水属性", "治疗者", "亚人", "支援", "回复","中体型","领袖"],
-      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复"],
+      ["3☆高等魔族 法雅", "火属性", "治疗者", "魔族", "领袖", "回复", "支援"],
       ["3☆传说女仆 艾蜜莉", "领袖", "光属性","辅助者","回复", "魔族(?)"],
       ["3☆千咒魔女 安西莉卡", "领袖", "暗属性","攻击者","人类(?)","亚人(?)","巨乳(?)"], 
       ["3☆元气补给 莲", "领袖", "火属性","治疗者","人类","回复(?)"],
@@ -751,19 +751,16 @@
     </table>
 
     <div id="anotation">
-    <h1>新词条·新词组收集中！已加入的词条</h1>
+    <h1>新词条·新词组收集接近尾声</h1>
+    <small>
     新词组：贫乳 防御 领袖 巨乳 水属性<br/>
     风属性 领袖 越战越强 保护 支援<br/>
-    （按惯例，其中必定藏有新角色的必出词条）<br/>
-    伪娘：光属性 治疗者 贫乳 小体型 人类（虽然没有词条报告，但是大概率是人类，下同）<br/>
-    萤：水属性  治疗者 支援 人类 贫乳<br/>
-    舞娘：光属性 辅助者 亚人 <br/>
-    雪兰瑚： 水属性 治疗者 支援 亚人  <br/>
-    法雅：火属性 治疗者 魔族 领袖  魔族 回复<br/>
-    女仆长：光属性 辅助者 回复 魔族（？）<br/>
-    魔女：暗属性 攻击者 （巨乳？）  人类or亚人不明<br/>
-    莲：火属性 治疗者 回复（？） 人类<br/>
+    <br/>
+    角色词条<br/>
+    可点击【领袖】或【支援】按钮查看<br/>
+    最新：法雅添加了【支援】词条<br/>
     更多词条请去贴吧或nga发帖反馈<br/>
+  </small>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
      当今游戏推荐充值方式：gash点卡，在淘宝买了后直接在充值页面用就可以了。方案2还是云闪付。
