修改字体样式

--- a/index.html
+++ b/index.html
@@ -752,15 +752,15 @@
 
     <div id="anotation">
     <h1>新词条·新词组收集接近尾声</h1>
-    <small>
-    新词组：贫乳 防御 领袖 巨乳 水属性<br/>
-    风属性 领袖 越战越强 保护 支援<br/>
-    <br/>
-    角色词条<br/>
-    可点击【领袖】或【支援】按钮查看<br/>
-    最新：法雅添加了【支援】词条<br/>
-    更多词条请去贴吧或nga发帖反馈<br/>
-  </small>
+    <div style="font-size:22px">
+      新词组：贫乳 防御 领袖 巨乳 水属性<br/>
+      风属性 领袖 越战越强 保护 支援<br/>
+      
+      角色词条<br/>
+      可点击【领袖】或【支援】按钮查看<br/>
+      最新：法雅添加了【支援】词条<br/>
+      更多词条请去贴吧或nga发帖反馈<br/>
+    </div>
     NGA论坛天下布魔板块已经正式开放了，<a href="https://nga.178.com/thread.php?fid=-40525887">访问地址</a><br/>
      之前的<a href="https://github.com/RShock/RShock.github.io/blob/master/update.md">更新日志</a><br />
      当今游戏推荐充值方式：gash点卡，在淘宝买了后直接在充值页面用就可以了。方案2还是云闪付。
